adding primeng css

--- a/client-angular/src/styles.css
+++ b/client-angular/src/styles.css
@@ -1,4 +1,5 @@
 @import "primeng/resources/themes/bootstrap4-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
 @import "assets/styles/header-styling.css";
 @import "assets/styles/table-styling.css";
 @import "assets/styles/global-styling.css";
