--- a/client-angular/src/app/partial-views/market-trends/market-trends.component.html
+++ b/client-angular/src/app/partial-views/market-trends/market-trends.component.html
@@ -1,10 +1,7 @@
 <div class="grid-container">
     <div class="sidebar">
         <p-panel header="Portfolios">
-            <p-listbox 
-                [options]="marketTrends" 
-                [(ngModel)]="selectedMarketTrend"
-                optionLabel="trendName">
+            <p-listbox [options]="marketTrends" [(ngModel)]="selectedMarketTrend" optionLabel="trendName">
                 <ng-template let-marketTrend pTemplate="item">
                     <span>{{ GenerateMarketTrendName(marketTrend.trendName) }}</span>
                 </ng-template>
@@ -17,7 +14,8 @@
                 Please choose a market trend
             </p>
             <div class="flex-container flex-column gap-2">
-                <p-table *ngIf="selectedMarketTrend != undefined" [value]="selectedMarketTrend!.stockNews">
+                <p-table *ngIf="selectedMarketTrend != undefined" [value]="selectedMarketTrend!.stockNews"
+                    [paginator]="selectedMarketTrend!.stockNews.length > 5" [rows]="5" [rowsPerPageOptions]="[5, 10]">
                     <ng-template pTemplate="header">
                         <tr>
                             <th pSortableColumn="articleTitle">
@@ -31,7 +29,8 @@
                         </tr>
                     </ng-template>
                 </p-table>
-                <p-table *ngIf="selectedMarketTrend != undefined" [value]="selectedMarketTrend!.trendingStocks">
+                <p-table *ngIf="selectedMarketTrend != undefined" [value]="selectedMarketTrend!.trendingStocks"
+                    [paginator]="selectedMarketTrend!.stockNews.length > 5" [rows]="5" [rowsPerPageOptions]="[5, 10]">
                     <ng-template pTemplate="header">
                         <tr>
                             <th pSortableColumn="symbol">
