--- a/client-angular/src/app/partial-views/stocks-filter-pagination-table/stocks-filter-pagination-table.component.html
+++ b/client-angular/src/app/partial-views/stocks-filter-pagination-table/stocks-filter-pagination-table.component.html
@@ -1,16 +1,19 @@
 <div class="table-container">
     <h2 class="table-header">All Stocks</h2>
-    <p-table [value]="stocks" [paginator]="true" [rows]="5" [rowsPerPageOptions]="[5, 10, 20]">
+    <p-table [value]="stocks" [paginator]="stocks.length > 5" [rows]="5" [rowsPerPageOptions]="[5, 10, 20]">
         <ng-template pTemplate="header">
             <tr>
                 <th pSortableColumn="name">
-                    Name <p-sortIcon field="name"/>
+                    Name <p-sortIcon field="name" />
                 </th>
                 <th pSortableColumn="symbol">
-                    Symbol <p-sortIcon field="symbol"/>
+                    Symbol <p-sortIcon field="symbol" />
                 </th>
                 <th pSortableColumn="price">
-                    Price <p-sortIcon field="price"/>
+                    Price <p-sortIcon field="price" />
+                </th>
+                <th>
+                    Options
                 </th>
             </tr>
         </ng-template>
@@ -19,7 +22,11 @@
                 <td>{{stock.name}}</td>
                 <td>{{stock.symbol}}</td>
                 <td>{{stock.price}}</td>
+                <td>
+                    <p-button icon="pi pi-search" [rounded]="true" [text]="true"
+                        [routerLink]="['/', 'stocks', 'information']" [queryParams]="{ stockSymbol: stock.symbol}" />
+                </td>
             </tr>
-        </ng-template>
+            </ng-template>
     </p-table>
 </div>
