adding options to market trends

--- a/client-angular/src/app/partial-views/market-trends/market-trends.component.html
+++ b/client-angular/src/app/partial-views/market-trends/market-trends.component.html
@@ -21,11 +21,19 @@
                             <th pSortableColumn="articleTitle">
                                 Title <p-sortIcon field="articleTitle" />
                             </th>
+                            <th pSortableColumn="postTimeUtc">
+                                Post Time(UTC) <p-sortIcon field="postTimeUtc"/></th>
+                            <th>Link</th>
                         </tr>
                     </ng-template>
                     <ng-template pTemplate="body" let-stockNews>
                         <tr>
                             <td>{{stockNews.articleTitle}}</td>
+                            <td>{{stockNews.postTimeUtc}}</td>
+                            <td>
+                                <p-button icon="pi pi-external-link" [rounded]="true" [text]="true"
+                                    (onClick)="openExternalLink(stockNews.articleUrl)" />
+                            </td>
                         </tr>
                     </ng-template>
                 </p-table>
@@ -42,6 +50,9 @@
                             <th pSortableColumn="price">
                                 Price <p-sortIcon field="price" />
                             </th>
+                            <th pSortableColumn="change">
+                                Change <p-sortIcon field="change"/>
+                            </th>
                         </tr>
                     </ng-template>
                     <ng-template pTemplate="body" let-trendingStock>
@@ -49,6 +60,7 @@
                             <td>{{trendingStock.symbol}}</td>
                             <td>{{trendingStock.name}}</td>
                             <td>{{trendingStock.price}}</td>
+                            <td>{{trendingStock.change}} ({{trendingStock.changePercent}}%)</td>
                         </tr>
                     </ng-template>
                 </p-table>
