--- a/client-angular/src/app/partial-views/notification-center/notification-center.component.html
+++ b/client-angular/src/app/partial-views/notification-center/notification-center.component.html
@@ -1,4 +1,4 @@
-<div class="flex-container flex-column p-2">
+<div class="container flex-column p-2">
     <h2>Your notifications</h2>
     <div>
         <table>
