--- a/client-angular/src/styles.css
+++ b/client-angular/src/styles.css
@@ -3,6 +3,7 @@
 @import "assets/styles/header-styling.css";
 @import "assets/styles/table-styling.css";
 @import "assets/styles/global-styling.css";
+@import "assets/styles/listbox-styling.css";
 
 body {
     font-family: 'Poppins', sans-serif;
