--- a/client-angular/src/app/partial-views/stocks-filter-pagination-table/stocks-filter-pagination-table.component.html
+++ b/client-angular/src/app/partial-views/stocks-filter-pagination-table/stocks-filter-pagination-table.component.html
@@ -1,6 +1,7 @@
 <div class="table-container">
     <h2 class="table-header">All Stocks</h2>
-    <p-table [value]="stocks" [paginator]="stocks.length > 5" [rows]="5" [rowsPerPageOptions]="[5, 10, 20]">
+    <p-table [value]="stocks" [paginator]="stocks.length > 5" [rows]="5" [rowsPerPageOptions]="[5, 10, 20]" [customSort]="true"
+        (sortFunction)="sortTargetPriceChangePercent($event)">
         <ng-template pTemplate="header">
             <tr>
                 <th pSortableColumn="name">
@@ -12,16 +13,20 @@
                 <th pSortableColumn="price">
                     Price <p-sortIcon field="price" />
                 </th>
+                <th pSortableColumn="targetChangePercent">
+                    Target Mean Price Change (%) <p-sortIcon field="targetChangePercent" />
+                </th>
                 <th>
                     Options
                 </th>
             </tr>
         </ng-template>
-        <<ng-template pTemplate="body" let-stock>
+        <ng-template pTemplate="body" let-stock>
             <tr>
                 <td>{{stock.name}}</td>
                 <td>{{stock.symbol}}</td>
                 <td>{{stock.price}}</td>
+                <td>{{stock.analysis.targetMeanPrice}}  ({{targetPriceChangePercentage(stock)}}%) </td>
                 <td>
                     <p-button icon="pi pi-search" [rounded]="true" [text]="true"
                         [routerLink]="['/', 'stocks', 'information']" [queryParams]="{ stockSymbol: stock.symbol}" />
