--- a/client-angular/src/app/partial-views/portfolio-details/portfolio-details.component.html
+++ b/client-angular/src/app/partial-views/portfolio-details/portfolio-details.component.html
@@ -1,20 +1,21 @@
-<p-table [value]="this.watchingStockLists" [paginator]="watchingStockLists.length > 10" [rows]="10" [rowsPerPageOptions]="[10, 20]"> 
+<p-table [value]="this.watchingStockLists" [paginator]="watchingStockLists.length > 10" [rows]="10"
+  [rowsPerPageOptions]="[10, 20]">
   <ng-template pTemplate="header">
     <tr>
       <th pSortableColumn="name">
-        Name <p-sortIcon field="name"/>
+        Name <p-sortIcon field="name" />
       </th>
       <th pSortableColumn="symbol">
-        Symbol <p-sortIcon field="symbol"/>
+        Symbol <p-sortIcon field="symbol" />
       </th>
       <th pSortableColumn="price">
-        Price <p-sortIcon field="price"/>
+        Price <p-sortIcon field="price" />
       </th>
       <th pSortableColumn="prediction">
-        Predicition <p-sortIcon field="prediction"/>
+        Predicition <p-sortIcon field="prediction" />
       </th>
       <th pSortableColumn="shares">
-        Shares <p-sortIcon field="shares"/>
+        Shares <p-sortIcon field="shares" />
       </th>
       <th>Note</th>
       <th>Last Update</th>
@@ -33,19 +34,31 @@
         {{watchingStockList.shares}}
       </td>
       <td>
-        <ng-container *ngIf="!watchingStockList.note; else elseTemplate">
-          <p-button icon="pi pi-pencil" [rounded]="true" [text]="true" (onClick)="CreateStockNote(watchingStockList.symbol)"/>
-        </ng-container>
-        <ng-template #elseTemplate>
-          <p (click)="DeleteNote(watchingStockList.symbol)">{{watchingStockList.note}}</p>
-        </ng-template>
+        <div class="container align-items-center">
+          <p>{{watchingStockList.note}}</p>
+          <p-button icon="pi pi-pencil" [rounded]="true" [text]="true"
+            (onClick)="openStockNoteDialog(watchingStockList.symbol, watchingStockList.note)" />
+        </div>
       </td>
       <td>{{watchingStockList.lastUpdate | date}}</td>
       <td>
-        <p-button icon="pi pi-search" [rounded]="true" [text]="true" [routerLink]="['/', 'stocks', 'information']" [queryParams]="{ stockSymbol: watchingStockList.symbol}"/>
-        <p-button icon="pi pi-pencil" [rounded]="true" [text]="true" (onClick)="RedirectToSharesScreen(watchingStockList.stockSymbol)"/>
-        <p-button icon="pi pi-times" [rounded]="true" [text]="true" severity="danger" (onClick)="RemoveListStock(watchingStockList.symbol)"/>
+        <p-button icon="pi pi-search" [rounded]="true" [text]="true" [routerLink]="['/', 'stocks', 'information']"
+          [queryParams]="{ stockSymbol: watchingStockList.symbol}" />
+        <p-button icon="pi pi-pencil" [rounded]="true" [text]="true"
+          (onClick)="RedirectToSharesScreen(watchingStockList.symbol)" />
+        <p-button icon="pi pi-times" [rounded]="true" [text]="true" severity="danger"
+          (onClick)="RemoveListStock(watchingStockList.symbol)" />
       </td>
     </tr>
   </ng-template>
 </p-table>
+<p-dialog header="Edit Note" [modal]="true" [(visible)]="visibleDialog" [style]="{ width: '25rem' }">
+  <div class="flex align-items-center gap-3 mb-3">
+    <label for="note" class="font-semibold w-6rem">Note: </label>
+    <input [value]="note" pInputText id="note" class="flex-auto" autocomplete="off" [(ngModel)]="note"/>
+  </div>
+  <div class="flex justify-content-end gap-2">
+    <p-button label="Cancel" severity="secondary" (onClick)="visibleDialog = false" />
+    <p-button label="Save" (onClick)="updateStockNote()" />
+  </div>
+</p-dialog>
