--- a/client-angular/src/app/partial-views/stock-details/stock-details.component.html
+++ b/client-angular/src/app/partial-views/stock-details/stock-details.component.html
@@ -1,7 +1,7 @@
 <div class="stock-details-container">
     <h2>Stock Details</h2>
-    <button (click)="visibleAddNotificationDialog = true">Add Notification</button><br>
-    <button (click)="visibleAddStockToListDialog = true">Add Stock To List</button>
+    <button (click)="openAddNotificationDialog()">Add Notification</button><br>
+    <button (click)="openAddStockToListDialog()">Add Stock To List</button>
     <div id="stockDetails">
         <h3>{{stock?.name}}</h3>
         <p>current price: {{stock?.price}}</p>
