updating all function names

--- a/client-angular/src/app/partial-views/login/login.component.html
+++ b/client-angular/src/app/partial-views/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-container">
     <h2>Login</h2>
-    <form (ngSubmit)="SignIn()" #connectionForm="ngForm">
+    <form (ngSubmit)="signIn()" #connectionForm="ngForm">
         <div class="form-group">
             <label for="email">Email</label>
             <input type="email" id="email" placeholder="Enter your email" required name="email" ngModel>
