--- a/client-angular/src/app/partial-views/market-trends/market-trends.component.html
+++ b/client-angular/src/app/partial-views/market-trends/market-trends.component.html
@@ -3,7 +3,7 @@
         <p-panel header="Portfolios">
             <p-listbox [options]="marketTrends" [(ngModel)]="selectedMarketTrend" optionLabel="trendName">
                 <ng-template let-marketTrend pTemplate="item">
-                    <span>{{ GenerateMarketTrendName(marketTrend.trendName) }}</span>
+                    <span>{{ generateMarketTrendName(marketTrend.trendName) }}</span>
                 </ng-template>
             </p-listbox>
         </p-panel>
