--- a/client-angular/src/app/partial-views/register/register.component.html
+++ b/client-angular/src/app/partial-views/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="signup-container">
     <h2>Sign Up</h2>
-    <form (ngSubmit)="CreateUser()" #registrationForm="ngForm">
+    <form (ngSubmit)="createUser()" #registrationForm="ngForm">
         <div class="form-group">
             <label for="name">First Name</label>
             <input pInputText type="text" id="firstName" placeholder="Enter your name" required name="firstName" ngModel>
