--- a/client-angular/src/app/partial-views/user-information/user-information.component.html
+++ b/client-angular/src/app/partial-views/user-information/user-information.component.html
@@ -8,8 +8,8 @@
     </div>
     <div class="chart-container">
         <h3>Stock Portfolio</h3>
-        <p><strong>Total Gain:</strong>{{GetTotalGain()}}$</p>
-        <p><strong>Number of Stocks:</strong> {{CountOwnedStocks()}}</p>
+        <p><strong>Total Gain:</strong>{{getTotalGain()}}$</p>
+        <p><strong>Number of Stocks:</strong> {{countOwnedStocks()}}</p>
     </div>
     <div class="chart-container">
         <h3>Stock Distribution</h3>
