--- a/client-angular/src/app/partial-views/home/home.component.css
+++ b/client-angular/src/app/partial-views/home/home.component.css
@@ -10,27 +10,34 @@
 
 .hero h1 {
     font-size: 4rem;
-    margin-bottom: 4rem;
-    color: black;
+    color: #a7c8fa;
+    margin: 1rem;
 }
 
 .hero p {
     font-size: 1.8rem;
-    margin-bottom: 2rem;
+    margin: 0;
     max-width: 600px;
 }
 
 .hero button {
-    background-color: #0077b6;
+    /* background-color: #0077b6; */
+    background-color: #ffc61e;
     color: #ffffff;
+    text-shadow: 1px 1px 2px #000000;
+    font-weight: 700;
     border: none;
+    margin-top: 2rem;
     padding: 1rem 2rem;
     font-size: 1rem;
     border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: all 0.5s ease;
 }
 
 .hero button:hover {
-    background-color: #005a8c;
+    background-color: #ffe79f;
+    color: #000000;
+    text-shadow: none;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
