--- a/client-angular/src/app/partial-views/stock-details/stock-details.component.html
+++ b/client-angular/src/app/partial-views/stock-details/stock-details.component.html
@@ -16,23 +16,27 @@
         <p-chart type="bar" [data]="data" height="400" width="400"></p-chart>
     </div>
 </div>
-<p-dialog header="Edit Note" [modal]="true" [(visible)]="visibleAddNotificationDialog" [style]="{ width: '25rem' }">
-    <div class="flex align-items-center gap-3 mb-3">
-        <label for="targetPrice" class="font-semibold w-6rem">Target Price: </label>
-        <input pInputText id="targetPrice" class="flex-auto" autocomplete="off" [(ngModel)]="targetPrice" />
-    </div>
-    <div class="flex justify-content-end gap-2">
-        <p-button label="Cancel" severity="secondary" (onClick)="visibleAddNotificationDialog = false" />
-        <p-button label="Save" (onClick)="addNotification()" />
+<p-dialog header="Edit Note" [modal]="true" [(visible)]="visibleAddNotificationDialog">
+    <div class="container flex-column gap-1">
+        <div class="container align-items-center gap-1">
+            <label for="targetPrice" class="font-semibold w-6rem">Target Price: </label>
+            <input pInputText id="targetPrice" class="flex-auto" autocomplete="off" [(ngModel)]="targetPrice" />
+        </div>
+        <div class="container justify-space-between gap-1">
+            <p-button label="Cancel" severity="secondary" (onClick)="visibleAddNotificationDialog = false" />
+            <p-button label="Save" (onClick)="addNotification()" />
+        </div>
     </div>
 </p-dialog>
-<p-dialog header="Add Stock To List" [modal]="true" [(visible)]="visibleAddStockToListDialog" [style]="{ width: '25rem' }">
-    <div class="flex align-items-center gap-3 mb-3">
-        <label for="listName" class="font-semibold w-6rem">List Name: </label>
-        <input pInputText id="listName" class="flex-auto" autocomplete="off" [(ngModel)]="listName" />
-    </div>
-    <div class="flex justify-content-end gap-2">
-        <p-button label="Cancel" severity="secondary" (onClick)="visibleAddStockToListDialog = false" />
-        <p-button label="Save" (onClick)="addStockToList(listName)" />
+<p-dialog header="Add Stock To List" [modal]="true" [(visible)]="visibleAddStockToListDialog">
+    <div class="container flex-column gap-1">
+        <div class="container align-items-center gap-1">
+            <label for="listName" class="font-semibold w-6rem">List Name: </label>
+            <input pInputText id="listName" class="flex-auto" autocomplete="off" [(ngModel)]="listName" />
+        </div>
+        <div class="container justify-space-between gap-1">
+            <p-button label="Cancel" severity="secondary" (onClick)="visibleAddStockToListDialog = false" />
+            <p-button label="Save" (onClick)="addStockToList(listName)" />
+        </div>
     </div>
 </p-dialog>
