--- a/client-angular/src/assets/styles/global-styling.css
+++ b/client-angular/src/assets/styles/global-styling.css
@@ -10,6 +10,10 @@
     gap: 2rem;
 }
 
+.gap-1{
+    gap: 1rem;
+}
+
 .p-2{
     padding: 2rem;
 }
@@ -20,4 +24,12 @@
 
 .align-items-center{
     align-items: center;
+}
+
+.justify-space-between{
+    justify-content: space-between;
+}
+
+.mb-3{
+    margin-bottom: 3rem;
 }
