--- a/client-angular/src/app/partial-views/insights/insights.component.html
+++ b/client-angular/src/app/partial-views/insights/insights.component.html
@@ -1,6 +1,6 @@
 <div class="grid-container">
     <div class="sidebar">
-        <p-panel header="Portfolios">
+        <p-panel header="Trends">
             <p-listbox [options]="marketTrends" [(ngModel)]="selectedMarketTrend" optionLabel="trendName">
                 <ng-template let-marketTrend pTemplate="item">
                     <span>{{ generateMarketTrendName(marketTrend.trendName) }}</span>
@@ -9,7 +9,7 @@
         </p-panel>
     </div>
     <div class="content">
-        <p-panel header="Portfolio Details">
+        <p-panel header="Trend Details">
             <p *ngIf="selectedMarketTrend == undefined">
                 Please choose a market trend
             </p>
