--- a/client-angular/src/app/app.component.html
+++ b/client-angular/src/app/app.component.html
@@ -2,5 +2,7 @@
 <p-confirmDialog />
 <app-loading></app-loading>
 <app-header></app-header>
-<router-outlet></router-outlet>
+<div class="body">
+    <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
