--- a/client-angular/src/assets/styles/global-styling.css
+++ b/client-angular/src/assets/styles/global-styling.css
@@ -22,6 +22,14 @@
     margin: 2rem;
 }
 
+.mt-2{
+    margin-top: 2rem;
+}
+
+.mb-3{
+    margin-bottom: 3rem;
+}
+
 .align-items-center{
     align-items: center;
 }
@@ -30,6 +38,6 @@
     justify-content: space-between;
 }
 
-.mb-3{
-    margin-bottom: 3rem;
+.text-align-center{
+    text-align: center;
 }
