updating dialog header

--- a/client-angular/src/app/partial-views/stock-details/stock-details.component.html
+++ b/client-angular/src/app/partial-views/stock-details/stock-details.component.html
@@ -23,7 +23,7 @@
         </div>
     </div>
 </div>
-<p-dialog header="Edit Note" [modal]="true" [(visible)]="visibleAddNotificationDialog">
+<p-dialog header="Add Price Notification" [modal]="true" [(visible)]="visibleAddNotificationDialog">
     <div class="container flex-column gap-1">
         <div class="container align-items-center gap-1">
             <label for="targetPrice" class="font-semibold w-6rem">Target Price: </label>
