--- a/client-angular/src/app/partial-views/portfolio-details/portfolio-details.component.html
+++ b/client-angular/src/app/partial-views/portfolio-details/portfolio-details.component.html
@@ -52,13 +52,15 @@
     </tr>
   </ng-template>
 </p-table>
-<p-dialog header="Edit Note" [modal]="true" [(visible)]="visibleDialog" [style]="{ width: '25rem' }">
-  <div class="flex align-items-center gap-3 mb-3">
-    <label for="note" class="font-semibold w-6rem">Note: </label>
-    <input [value]="note" pInputText id="note" class="flex-auto" autocomplete="off" [(ngModel)]="note"/>
-  </div>
-  <div class="flex justify-content-end gap-2">
-    <p-button label="Cancel" severity="secondary" (onClick)="visibleDialog = false" />
-    <p-button label="Save" (onClick)="updateStockNote()" />
+<p-dialog header="Edit Note" [modal]="true" [(visible)]="visibleDialog">
+  <div class="container flex-column gap-1">
+    <div class="container align-items-center gap-1">
+      <label for="note" class="font-semibold w-6rem">Note: </label>
+      <input [value]="note" pInputText id="note" class="flex-auto" autocomplete="off" [(ngModel)]="note"/>
+    </div>
+    <div class="container justify-space-between gap-1">
+      <p-button label="Cancel" severity="secondary" (onClick)="visibleDialog = false" />
+      <p-button label="Save" (onClick)="updateStockNote()" />
+    </div>
   </div>
 </p-dialog>
