--- a/client-angular/src/app/partial-views/portfolio-details/portfolio-details.component.html
+++ b/client-angular/src/app/partial-views/portfolio-details/portfolio-details.component.html
@@ -1,4 +1,4 @@
-<p-table [value]="this.watchingStockLists" [paginator]="watchingStockLists.length > 10" [rows]="10"
+<p-table *ngIf="this.watchingStockLists" [value]="this.watchingStockLists" [paginator]="watchingStockLists.length > 10" [rows]="10"
   [rowsPerPageOptions]="[10, 20]">
   <ng-template pTemplate="header">
     <tr>
