--- a/client-angular/src/app/partial-views/stock-shares/stock-shares.component.html
+++ b/client-angular/src/app/partial-views/stock-shares/stock-shares.component.html
@@ -27,7 +27,7 @@
         </ng-template>
     </p-table>
 </div>
-<p-dialog header="Add Stock To List" [modal]="true" [(visible)]="visibleAddShareDialog">
+<p-dialog header="Add Shares To Stock" [modal]="true" [(visible)]="visibleAddShareDialog">
     <div class="container flex-column gap-1">
         <div class="container flex-column align-items-center">
             <label for="numberOfShares" class="font-semibold w-6rem">Number Of Shares: </label>
